# dobot-mgc-ros2-pkg

./: .gitignore
dobot_ws/install/: local_setup.sh  setup.sh
dobot_ws/install/dobot/: .rosinstall  local_setup.sh  setup.sh
dobot_ws/install/dobot/DobotDll_x64/: DobotServer.cpp
dobot_ws/install/dobot/DobotDll_x86/: DobotServer.cpp
dobot_ws/install/dobot/share/dobot/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
dobot_ws/log/: latest_build
dobot_ws/src/dobot/: CMakeLists.txt
dobot_ws/src/dobot/msg/: t.txt
dobot_ws/src/dobot/src/: DobotServer.cpp
dobot_ws/src/dobot/srv/: GetAlarmsState.srv  GetCPParams.srv  GetDeviceName.srv  GetDeviceSN.srv  GetDeviceVersion.srv  GetEndEffectorGripper.srv  GetEndEffectorLaser.srv  GetEndEffectorParams.srv  GetEndEffectorSuctionCup.srv  GetIOPWM.srv  GetJOGCommonParams.srv  GetPTPCoordinateParams.srv  GetPTPJumpParams.srv  GetPose.srv  SetARCCmd.srv  SetARCParams.srv  SetCPCmd.srv  SetCPParams.srv  SetDeviceName.srv  SetEMotor.srv  SetEndEffectorGripper.srv  SetEndEffectorLaser.srv  SetEndEffectorParams.srv  SetEndEffectorSuctionCup.srv  SetHOMECmd.srv  SetHOMEParams.srv  SetIODO.srv  SetIOMultiplexing.srv  SetIOPWM.srv  SetJOGCmd.srv  SetJOGCommonParams.srv  SetJOGCoordinateParams.srv  SetPTPCmd.srv  SetPTPJumpParams.srv  SetTRIGCmd.srv  SetWAITCmd.srv
